argo_server_sso/argoworkflows/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo-workflows
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      serviceAccountName: argo-workflows-sa
      terminationGracePeriodSeconds: 60
      nodeSelector:
        cloud.google.com/gke-nodepool: argo-node-pool
      containers:
      - name: argo-server
        args: ["server", "--secure=false", "--auth-mode=sso"]
        ports:
        - containerPort: 2746
        livenessProbe:
          httpGet:
            path: /
            port: 2746
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 30
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 2746
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 30
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        lifecycle:
          preStop:
            exec:
              command:
                - /bin/sh
                - -c
                - sleep 10
