argo_server_sso/argoworkflows/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo-workflows
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  type: ClusterIP
  selector:
    app: argo-server
  ports:
  - name: argo-workflows-ui
    port: 80
    targetPort: 2746
    protocol: TCP
