argo_server_sso/argoworkflows/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server-ingress
  namespace: argo-workflows
spec:
  defaultBackend:
    service:
      name: argo-server
      port:
        number: 80
